# logic-hammer

./: .gitignore  Cargo.toml  shell.nix
src/: inference.rs  model.rs  training.rs
